objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACA_Indicator__c</fullName>
        <label>ACA Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_Cancellation_Flag__c</fullName>
        <label>AR Cancellation Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASA_Contract_Type__c</fullName>
        <description>This field is used to capture the type of ASA Contract signed</description>
        <label>ASA Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Fixed Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASA_Contract_Type_del__c</fullName>
        <description>This field is used to capture the type of ASA Contract signed</description>
        <label>ASA Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
                <value>
                    <fullName>Fixed Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the ASA Contract is signed</description>
        <label>ASA Signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASA_Signed_del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the ASA Contract is signed</description>
        <label>ASA Signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASO_Indicator__c</fullName>
        <label>ASO Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accidental_Death_Dismemberment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Prospect Account is interested in Accidental Death &amp; Dismemberment Insurance</description>
        <label>Accidental Death &amp; Dismemberment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Case_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Cluster_Effective_Date__c</fullName>
        <description>This field is used to capture the first date that the cluster for this account is effective as listed in BlueStar</description>
        <label>Account Cluster Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Cluster_End_Date__c</fullName>
        <description>This field is used to capture the first date that the cluster for this account is no longer in effect as listed in BlueStar</description>
        <label>Account Cluster End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Cluster_Name__c</fullName>
        <description>This field is used to capture the name of the marketing individual represented by the cluster number as listed in BlueStar</description>
        <inlineHelpText>This field is pulling the Account Executive name from BlueStar, listed as Account Cluster Name in BlueStar</inlineHelpText>
        <label>Account Executive 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Cluster_Number__c</fullName>
        <description>This field is used to capture the number assigned to the sales and account executives as listed in BlueStar</description>
        <label>Account Cluster Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Cluster_Product_Type__c</fullName>
        <description>This field is used to capture the abbreviation of a product classification (e.g. HMO, PPO, POS) associated with this Account Cluster as listed in BlueStar</description>
        <label>Account Cluster Product Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Cluster_Region__c</fullName>
        <description>This field is used to capture the Code representing the region of the Account Cluster as listed in BlueStar</description>
        <label>Account Cluster Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Cluster_User_Identification__c</fullName>
        <description>This field is used to capture the Identification number of the Account Cluster Marketing Representative as listed in BlueStar</description>
        <label>Account Cluster User Identification</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Executive_2__c</fullName>
        <description>This field is used to capture the second Account Executive as listed in BlueStar</description>
        <label>Account Executive 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Framework_Count__c</fullName>
        <label>Account Framework - Count</label>
        <summaryForeignKey>Account_Framework__c.Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Persistency__c</fullName>
        <description>This field is used to calculate the Persistency related to renewing and maintaining the account.</description>
        <formula>IF( LOWER(X1_31_Account_Status__c) = &apos;active&apos;,
    IF(
        (Active_Health_Members__c/  X1_31_Membership__c)*100 &gt; 100 ,1, 
         Active_Health_Members__c/  X1_31_Membership__c
       ),
    0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Persistency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Reinstate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the account was reinstated.</description>
        <label>Account Reinstate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Renewal_Notification_Indicator__c</fullName>
        <description>Renewal Notification Indicator for account</description>
        <label>Account Renewal Notification Indicator</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Stickiness__c</fullName>
        <description>pull from Account Framework for Strategic Plan, this field should be hidden from Account page layout.</description>
        <label>Account Stickiness</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>This field is used to capture the Type of account.</description>
        <inlineHelpText>Format: Effective Date, Enrollment, Company Name</inlineHelpText>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Sub Producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active_Dental_Members__c</fullName>
        <description>This field is used to capture the number of active dental members for the Group Account as listed in BlueStar</description>
        <label>Active Dental Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Dental_Subscribers__c</fullName>
        <description>This field is used to capture the number of active dental contracts for the Group Account as listed in BlueStar</description>
        <label>Active Dental Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Health_Member_Change_del__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Health Member Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Health_Members__c</fullName>
        <description>This field is used to capture the number of active health members for the Group Account as listed in BlueStar</description>
        <label>Active Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Health_Subscribers__c</fullName>
        <description>This field is used to capture the number of active health contracts for the Group Account as listed in BlueStar</description>
        <label>Active Health Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <description>This field is used to capture Additional information related to the Account.</description>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Administrative_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This hidden checkbox is used to trigger an update on the Account object via a data load, in order to trigger events that would occur for an isUpdate operation.</description>
        <inlineHelpText>This checkbox should remain hidden.</inlineHelpText>
        <label>Administrative Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Opportunity_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alpha_Prefix__c</fullName>
        <label>Alpha Prefix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>At_Risk__c</fullName>
        <formula>IF( risk_comparison__c &gt; 0, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>At Risk?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoCreateOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checked box is used to run a workflow to auto create an opportunity.</description>
        <label>AutoCreateOpportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Automated_Eligibility_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if an account falls under the Automated Eligibility Process as listed in BlueStar</description>
        <label>Automated Eligibility Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCBS_Enrolled_Members__c</fullName>
        <description>This field is used to capture the total number of BCBS Enrolled Members on a Group Account.</description>
        <label>Total Active Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BCC_Program_s__c</fullName>
        <description>This field is used to capture the Blue Care Connection programs included if BCC Standard or BCC Enhanced is not chosen as the HCM Program Model</description>
        <inlineHelpText>Blue Care Connection programs included if BCC Standard or BCC Enhanced is not chosen as the HCM Program Model</inlineHelpText>
        <label>BCC Program(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>HCM_Program_Model__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Care Coordination Early Intervention</fullName>
                </value>
                <value>
                    <fullName>Case Management</fullName>
                </value>
                <value>
                    <fullName>Condition Management (DM)</fullName>
                </value>
                <value>
                    <fullName>Lifestyle Management</fullName>
                </value>
                <value>
                    <fullName>NurseLine</fullName>
                </value>
                <value>
                    <fullName>Special Beginnings</fullName>
                </value>
                <value>
                    <fullName>Utilization Management</fullName>
                </value>
                <value>
                    <fullName>Well on Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Beneficiary_Admin_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if a Prospect Account is interested in the Beneficiary Admin Tool.</description>
        <label>Beneficiary Admin Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <description>This field is used to capture the Billing County for an Account.</description>
        <label>Billing County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blue_Clients_in_Similar_Industry__c</fullName>
        <description>This field is used to capture the BCBS Clients in the same industry as the Group Account.</description>
        <label>Blue Clients in Similar Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Blue_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture the Blue Leader used to classify Producer accounts and its contacts with the highest privilege to get their cases serviced earliest.</description>
        <label>Blue Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bluecard_Mailbox__c</fullName>
        <label>Bluecard Mailbox</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CIRC_Name__c</fullName>
        <inlineHelpText>The value that corresponds to the filters available in the CIRC tool</inlineHelpText>
        <label>CIRC Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Blues</fullName>
                </value>
                <value>
                    <fullName>Centene</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Community Health Choice</fullName>
                </value>
                <value>
                    <fullName>CommunityCare</fullName>
                </value>
                <value>
                    <fullName>CommunityFirst</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>FirstCare</fullName>
                </value>
                <value>
                    <fullName>Harken Health</fullName>
                </value>
                <value>
                    <fullName>Health Alliance</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>Kaiser</fullName>
                </value>
                <value>
                    <fullName>Land of Lincoln</fullName>
                </value>
                <value>
                    <fullName>Molina</fullName>
                </value>
                <value>
                    <fullName>Mutual of Omaha</fullName>
                </value>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>New Mexico Health Connections</fullName>
                </value>
                <value>
                    <fullName>Oscar Health</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PacificSource</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Scott and White</fullName>
                </value>
                <value>
                    <fullName>Sendero</fullName>
                </value>
                <value>
                    <fullName>Superior</fullName>
                </value>
                <value>
                    <fullName>United Health</fullName>
                </value>
                <value>
                    <fullName>WellCare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIRC_URL__c</fullName>
        <formula>IF( ISBLANK(  TEXT(CIRC_Name__c) ),
HYPERLINK(&quot;http://community.fyiblue.com/sites/CIRC/default.aspx&quot;, &quot;Search CIRC for Competitive Intelligence&quot;, &quot;_blank&quot;),

HYPERLINK(&quot;http://community.fyiblue.com/sites/CIRC/default.aspx?&amp;FilterField1=Carrier&amp;FilterValue1=&quot; &amp;  TEXT(CIRC_Name__c), &quot;Competitive Intelligence: &quot; &amp; TEXT(CIRC_Name__c), &quot;_blank&quot;) 

)</formula>
        <inlineHelpText>In order to access the CIRC tool, you must complete the prerequisite training.  Please contact the CIRC team to get access.</inlineHelpText>
        <label>CIRC URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Administration_Type__c</fullName>
        <description>This field is used to capture the COBRA Administration type as listed in BlueStar; GRP = Group Administers; HCSC = COBRA Admin Marion; OTHR = Non HCSC Vendor administers; N/A.</description>
        <label>COBRA Administration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GRP</fullName>
                </value>
                <value>
                    <fullName>HCSC</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>OTHR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COBRA__c</fullName>
        <label>COBRA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPFieldCompletionRate__c</fullName>
        <description>Calculates the percentage of client profile fields completed.</description>
        <inlineHelpText>Account #, Active Health Members, Annual Revenue, Effective Date, Employees, Funding Type, HCSC Client Since, Division, Key Locations, Most Recent Financial Position, Name, Renewal Date, Risk Level, Risk Reason, Risk Type, Shipping Address, Ticker Symbol</inlineHelpText>
        <label>Client Profile Field Completion Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cancellation_Code__c</fullName>
        <description>This field is used to capture the BlueStar - Code indicating the reason for a cancellation or reinstatement initiated at the Account level.</description>
        <label>Cancellation/Reinstatement Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CBG – Cancel BlueStar Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <description>This field is used to capture the Group Account Cancel/Reinstatement Date or the date when the Producer was terminated.</description>
        <label>Cancellation/Reinstatement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Explanation__c</fullName>
        <description>This field is used to capture the explanation for cancellation or reinstatement request.</description>
        <label>Cancellation/Reinstatement Explanation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <description>This field is used to capture the reason why an account is being cancelled or reinstated.</description>
        <label>Cancellation/Reinstatement Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>401 Misc - Below Percentage</fullName>
                </value>
                <value>
                    <fullName>402 Misc - Reason/Unknown</fullName>
                </value>
                <value>
                    <fullName>403 Misc - Non-Payment of Dues</fullName>
                </value>
                <value>
                    <fullName>404 Misc - Grp Moved Out of State</fullName>
                </value>
                <value>
                    <fullName>405 Misc - Never Effective</fullName>
                </value>
                <value>
                    <fullName>406 Misc - New Group Number</fullName>
                </value>
                <value>
                    <fullName>408 Misc - Other UW Requirements</fullName>
                </value>
                <value>
                    <fullName>409 Misc - Acct has 0 Subs</fullName>
                </value>
                <value>
                    <fullName>410 Misc - Coverage Discontinued</fullName>
                </value>
                <value>
                    <fullName>411 Misc - New Decision Maker</fullName>
                </value>
                <value>
                    <fullName>412 Misc - Trans to Existing Acct</fullName>
                </value>
                <value>
                    <fullName>413 Misc - Broker Recommendation</fullName>
                </value>
                <value>
                    <fullName>414 Misc - Cons Cov w/1+ Carrier</fullName>
                </value>
                <value>
                    <fullName>415 Moved to Other BCBS Plan</fullName>
                </value>
                <value>
                    <fullName>416 Misc - Owner Chg/Merg/Acq</fullName>
                </value>
                <value>
                    <fullName>417 Misc - Parent Co Decision</fullName>
                </value>
                <value>
                    <fullName>418 Misc - Absorbed by ParentGrp</fullName>
                </value>
                <value>
                    <fullName>419 Misc - Out-of-Business</fullName>
                </value>
                <value>
                    <fullName>427 Misc - Political</fullName>
                </value>
                <value>
                    <fullName>433 Misc - Trans Due to Ben Chg</fullName>
                </value>
                <value>
                    <fullName>436 Misc - Changed Brokers</fullName>
                </value>
                <value>
                    <fullName>501 Claims - Service/Problems</fullName>
                </value>
                <value>
                    <fullName>502 Mbrship - Billing Serv/Prob</fullName>
                </value>
                <value>
                    <fullName>503 Service - Local Office</fullName>
                </value>
                <value>
                    <fullName>504 Service - Customer Service</fullName>
                </value>
                <value>
                    <fullName>608 Network - PPO/POS Hospital</fullName>
                </value>
                <value>
                    <fullName>609 Network - PPO/POS Phys</fullName>
                </value>
                <value>
                    <fullName>612 Network - HMO Hospital</fullName>
                </value>
                <value>
                    <fullName>613 Network - HMO Phys Network</fullName>
                </value>
                <value>
                    <fullName>614 Prod Design - Prescription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Status__c</fullName>
        <description>This field is used to capture the status of a cancellation or reinstatement request for the Account.</description>
        <label>Cancellation/Reinstatement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Cancellation Rejected</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Requested Cancellation</fullName>
                </value>
                <value>
                    <fullName>CancelPend</fullName>
                </value>
                <value>
                    <fullName>Cancelled with Future CD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Submitted_Date__c</fullName>
        <description>This field is used to capture the date when the cancellation or reinstatement request was submitted.</description>
        <label>Cancellation/Reinstatement Submitted Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancelled_Health_Contracts__c</fullName>
        <description>Number of health contracts lost due to account cancellation.</description>
        <label>Cancelled Health Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancelled_Health_Members__c</fullName>
        <description>Number of health members lost due to account cancellation.</description>
        <label>Cancelled Health Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cancels__c</fullName>
        <label>Cancels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test 1</fullName>
                </value>
                <value>
                    <fullName>Test 2</fullName>
                </value>
                <value>
                    <fullName>Test 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield – HCSC State</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield – other state</fullName>
                </value>
                <value>
                    <fullName>CIGNA</fullName>
                </value>
                <value>
                    <fullName>Community Care</fullName>
                </value>
                <value>
                    <fullName>Coventry</fullName>
                </value>
                <value>
                    <fullName>Don’t know</fullName>
                </value>
                <value>
                    <fullName>First Care</fullName>
                </value>
                <value>
                    <fullName>Global Health</fullName>
                </value>
                <value>
                    <fullName>Health Alliance</fullName>
                </value>
                <value>
                    <fullName>Health Choice</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>Lovelace</fullName>
                </value>
                <value>
                    <fullName>None – will not provide group coverage</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pacific Source</fullName>
                </value>
                <value>
                    <fullName>Presbyterian</fullName>
                </value>
                <value>
                    <fullName>Scott &amp; White</fullName>
                </value>
                <value>
                    <fullName>United HealthCare</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if an account has carved out business to other vendors.  It is populated based on Carriers associated to the account.</description>
        <label>Carve Out?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Factor_Score__c</fullName>
        <description>This field is used to bucket the Account&apos;s &quot;Complexity Score&quot; into sections in order to calculate the final &quot;Weighted Complexity Score&quot;.</description>
        <formula>IF(Complexity_Score__c&gt;51.99,1.75,IF(Complexity_Score__c&gt;27,1.00,IF(Complexity_Score__c&gt;0,0.75,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Factor Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cede_End_Date__c</fullName>
        <label>Cede End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>